navigation and bottombar added

--- a/app/src/main/res/navigation/home_nav.xml
+++ b/app/src/main/res/navigation/home_nav.xml
@@ -3,28 +3,29 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/home_nav"
-    app:startDestination="@id/homeFragment">
+    app:startDestination="@id/detailsFragment">
 
-    <fragment
-        android:id="@+id/homeFragment"
-        android:name="com.ayberk.spacex.presentation.ui.HomeFragment"
-        android:label="fragment_home"
-        tools:layout="@layout/fragment_home" >
-        <action
-            android:id="@+id/action_homeFragment_to_detailsFragment"
-            app:destination="@id/detailsFragment" />
-        <action
-            android:id="@+id/action_homeFragment_to_crewFragment"
-            app:destination="@id/crewFragment" />
-    </fragment>
     <fragment
         android:id="@+id/detailsFragment"
         android:name="com.ayberk.spacex.presentation.ui.DetailsFragment"
         android:label="fragment_details"
-        tools:layout="@layout/fragment_details" />
+        tools:layout="@layout/fragment_details" >
+        <action
+            android:id="@+id/action_detailsFragment_to_crewFragment"
+            app:destination="@id/crewFragment" />
+    </fragment>
     <fragment
         android:id="@+id/crewFragment"
         android:name="com.ayberk.spacex.presentation.ui.CrewFragment"
         android:label="fragment_crew"
-        tools:layout="@layout/fragment_crew" />
+        tools:layout="@layout/fragment_crew" >
+        <action
+            android:id="@+id/action_crewFragment_to_rocketsFragment"
+            app:destination="@id/rocketsFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/rocketsFragment"
+        android:name="com.ayberk.spacex.presentation.ui.RocketsFragment"
+        android:label="fragment_rockets"
+        tools:layout="@layout/fragment_rockets" />
 </navigation>
