rocket details added

--- a/app/src/main/res/navigation/home_nav.xml
+++ b/app/src/main/res/navigation/home_nav.xml
@@ -13,6 +13,9 @@
         <action
             android:id="@+id/action_detailsFragment_to_crewFragment"
             app:destination="@id/crewFragment" />
+        <argument
+            android:name="rocketId"
+            app:argType="com.ayberk.spacex.presentation.models.rockets.RocketsItem" />
     </fragment>
     <fragment
         android:id="@+id/crewFragment"
