--- a/app/src/main/res/layout/item_rockets.xml
+++ b/app/src/main/res/layout/item_rockets.xml
@@ -12,6 +12,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
+        android:gravity="center"
         android:orientation="vertical"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -33,9 +34,10 @@
 
         <TextView
             android:id="@+id/txtRocket"
-            android:layout_width="178dp"
-            android:layout_height="57dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:gravity="center"
+            android:paddingTop="5dp"
             android:text="TextView"
             android:textColor="@color/black"
             android:textSize="20sp"
