--- a/app/src/main/res/layout/item_dragons.xml
+++ b/app/src/main/res/layout/item_dragons.xml
@@ -6,7 +6,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="195dp"
         android:orientation="horizontal"
         android:paddingStart="10dp"
         android:paddingBottom="10dp">
@@ -20,7 +20,7 @@
             <ImageView
                 android:id="@+id/imgDragon"
                 android:layout_width="match_parent"
-                android:layout_height="161dp"
+                android:layout_height="match_parent"
                 android:src="@drawable/astronaut" />
         </androidx.cardview.widget.CardView>
 
@@ -48,12 +48,35 @@
                 android:paddingStart="10dp"
                 android:paddingTop="5dp"
                 android:text="TextView"
+                android:textColor="@color/black"
                 android:textSize="18sp" />
 
             <TextView
                 android:id="@+id/txtHeight"
                 android:layout_width="match_parent"
                 android:layout_height="2dp"
+                android:layout_weight="1"
+                android:paddingStart="10dp"
+                android:paddingTop="5dp"
+                android:text="TextView"
+                android:textColor="@color/black"
+                android:textSize="18sp" />
+
+            <TextView
+                android:id="@+id/txtDegrees"
+                android:layout_width="match_parent"
+                android:layout_height="5dp"
+                android:layout_weight="1"
+                android:paddingStart="10dp"
+                android:paddingTop="5dp"
+                android:text="TextView"
+                android:textColor="@color/black"
+                android:textSize="18sp" />
+
+            <TextView
+                android:id="@+id/txtCrewCapacity"
+                android:layout_width="match_parent"
+                android:layout_height="5dp"
                 android:layout_weight="1"
                 android:paddingStart="10dp"
                 android:paddingTop="5dp"
