--- a/app/src/main/res/layout/fragment_rockets.xml
+++ b/app/src/main/res/layout/fragment_rockets.xml
@@ -3,10 +3,18 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".presentation.ui.RocketsFragment">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rcyclerRockets"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
+
+    <com.airbnb.lottie.LottieAnimationView
+        android:id="@+id/lottieAnimationView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:lottie_autoPlay="true"
+        app:lottie_rawRes="@raw/astrounaut" />
 </FrameLayout>
