--- a/app/src/main/res/layout/item_rockets.xml
+++ b/app/src/main/res/layout/item_rockets.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
@@ -30,6 +31,13 @@
                 android:layout_height="match_parent"
                 app:srcCompat="@drawable/rocket" />
 
+            <com.airbnb.lottie.LottieAnimationView
+                android:id="@+id/lottieRocketFavorite"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:lottie_autoPlay="false"
+                app:lottie_rawRes="@raw/rocketfavanimation" />
+
         </androidx.cardview.widget.CardView>
 
         <TextView
@@ -51,6 +59,9 @@
             android:layout_gravity="right"
             android:paddingTop="5dp"
             android:src="@drawable/favorite" />
+
     </LinearLayout>
+
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
