--- a/app/src/main/res/layout/item_rocketfav.xml
+++ b/app/src/main/res/layout/item_rocketfav.xml
@@ -43,13 +43,28 @@
             android:textSize="20sp"
             android:textStyle="bold" />
 
-        <ImageView
-            android:id="@+id/imgMark"
-            android:layout_width="56dp"
-            android:layout_height="49dp"
-            android:paddingTop="5dp"
+        <LinearLayout
+            android:layout_width="98dp"
+            android:layout_height="match_parent"
             android:layout_gravity="right"
-            android:src="@drawable/mark" />
+            android:orientation="horizontal">
+
+            <ImageView
+                android:id="@+id/imgMark"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_gravity="right"
+                android:paddingTop="10dp"
+                android:src="@drawable/mark" />
+
+            <ImageView
+                android:id="@+id/imgDelete"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_gravity="right"
+                android:paddingTop="10dp"
+                android:src="@drawable/delete" />
+        </LinearLayout>
 
 
     </LinearLayout>
