--- a/app/src/main/res/layout/fragment_crewdragon.xml
+++ b/app/src/main/res/layout/fragment_crewdragon.xml
@@ -7,6 +7,12 @@
     android:orientation="vertical"
     tools:context=".presentation.ui.CrewDragonFragment">
 
+    <ProgressBar
+        android:id="@+id/progressBar"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rcyclerCrew"
         android:layout_width="match_parent"
@@ -47,8 +53,8 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rcyclerDragon"
-        android:layout_width="409dp"
-        android:layout_height="446dp"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:layout_marginTop="16dp" />
 
 </LinearLayout>
