--- a/app/src/main/res/layout/item_crew.xml
+++ b/app/src/main/res/layout/item_crew.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
@@ -44,12 +43,23 @@
             android:textSize="20sp"
             android:textStyle="bold" />
 
-        <ImageView
-            android:id="@+id/imgAgency"
-            android:layout_width="74dp"
-            android:layout_height="42dp"
-            android:background="@color/transparent"
-            android:src="@drawable/info" />
-    </LinearLayout>
+        <LinearLayout
+            android:layout_width="160dp"
+            android:layout_height="44dp">
 
+            <ImageView
+                android:id="@+id/imgAgency"
+                android:layout_width="78dp"
+                android:layout_height="42dp"
+                android:background="@color/transparent"
+                android:src="@drawable/info" />
+
+            <ImageView
+                android:id="@+id/imgCrewFavorite"
+                android:layout_width="match_parent"
+                android:layout_height="40dp"
+                app:srcCompat="@drawable/crewaddfavorite" />
+        </LinearLayout>
+
+    </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
