--- a/app/src/main/res/layout/fragment_favorite.xml
+++ b/app/src/main/res/layout/fragment_favorite.xml
@@ -21,8 +21,8 @@
 
     <androidx.cardview.widget.CardView
         android:id="@+id/cardView"
-        android:layout_width="201dp"
-        android:layout_height="66dp"
+        android:layout_width="180dp"
+        android:layout_height="60dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         app:cardCornerRadius="20dp"
@@ -37,28 +37,75 @@
             android:isScrollContainer="false"
             android:minHeight="?attr/actionBarSize"
             android:pointerIcon="cell"
-            android:theme="?attr/actionBarTheme">
+            android:theme="?attr/actionBarTheme" />
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:gravity="center"
-                android:text="@string/favoritetoolbarText"
-                android:textColor="#fff"
-                android:textSize="20sp"
-                android:textStyle="bold"
-                tools:layout_editor_absoluteX="16dp"
-                tools:layout_editor_absoluteY="15dp" />
-
-        </androidx.appcompat.widget.Toolbar>
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:text="@string/favoritetoolbarText"
+            android:textColor="#fff"
+            android:textSize="20sp"
+            android:textStyle="bold" />
     </androidx.cardview.widget.CardView>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rcyclerRocketFav"
         android:layout_width="match_parent"
-        android:layout_height="398dp"
+        android:layout_height="300dp"
         android:layout_marginTop="16dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/cardView" />
+
+    <androidx.cardview.widget.CardView
+        android:id="@+id/cardViewcrew"
+        android:layout_width="180dp"
+        android:layout_height="60dp"
+        android:layout_marginStart="8dp"
+        app:cardCornerRadius="20dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/rcyclerRocketFav"> <!-- İstenilen corner radius değeri -->
+
+        <androidx.appcompat.widget.Toolbar
+            android:id="@+id/toolbarcrew"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@color/primary"
+            android:isScrollContainer="false"
+            android:minHeight="?attr/actionBarSize"
+            android:pointerIcon="cell"
+            android:theme="?attr/actionBarTheme" />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:text="@string/favoritecrewtoolbarText"
+            android:textColor="#fff"
+            android:textSize="20sp"
+            android:textStyle="bold" />
+    </androidx.cardview.widget.CardView>
+
+    <ImageView
+        android:id="@+id/imgCrewClear"
+        android:layout_width="49dp"
+        android:layout_height="48dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="16dp"
+        android:src="@drawable/deletecrew"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.93"
+        app:layout_constraintStart_toEndOf="@+id/cardViewcrew"
+        app:layout_constraintTop_toBottomOf="@+id/rcyclerRocketFav" />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rcyclerfavcrew"
+        android:layout_width="match_parent"
+        android:layout_height="348dp"
+        android:layout_marginTop="16dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/cardViewcrew" />
 </androidx.constraintlayout.widget.ConstraintLayout>
