--- a/app/src/main/res/layout/item_crew.xml
+++ b/app/src/main/res/layout/item_crew.xml
@@ -30,6 +30,14 @@
                 android:layout_height="match_parent"
                 app:srcCompat="@drawable/astronaut" />
 
+            <com.airbnb.lottie.LottieAnimationView
+                android:id="@+id/lottieAnimationCrewView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:visibility="gone"
+                app:lottie_autoPlay="false"
+                app:lottie_rawRes="@raw/animationcrewfavorite" />
+
         </androidx.cardview.widget.CardView>
 
         <TextView
